# Habit

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
config/: settings.py  urls.py
habit/: models.py  paginators.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/management/commands/: add_user.py  csu.py
habit/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_action_alter_habit_frequency_and_more.py  0004_habit_tg_id.py  0005_alter_habit_action_alter_habit_duration_and_more.py  0006_relatedhabit_alter_habit_related_habit.py
habit/templates/: habit_main.html
nginx/: Dockerfile  nginx.conf
users/: admin.py  forms.py  models.py  serializer.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_id.py  0003_alter_user_tg_id.py
users/templates/: base.html  login.html  logout.html  password_reset_done.html  profile.html  register.html
